Web config fixed

--- a/web.config
+++ b/web.config
@@ -2,7 +2,7 @@
 <configuration>
     <system.webServer>
         <staticContent>
-            <mimeMap fileExtension=".json" mimeMap="application/json" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
         <httpProtocol>
             <customHeaders>
